# PolishFakeNewsDetector

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
BusinessLogicService/: Dockerfile  pom.xml
BusinessLogicService/src/main/resources/: application.properties  classDiagram.uml  logback.xml
BusinessLogicService/src/main/resources/docs/: classDiagram.plantuml
BusinessLogicService/src/test/resources/: application.properties  logback.xml
UserService/: Dockerfile  pom.xml
UserService/src/main/resources/: application.properties  classDiagram.puml  logback.xml
UserService/src/main/resources/static/: _new_account_template.html  _reset_password_template.html
UserService/src/test/resources/: application.properties
doc/: BpmnDiagram.puml  ComponentDiagram.puml  DeploymentDiagram.puml  DfdDiagram.puml  HistoryDb.puml  UseCaseDiagram.puml  UserDB.puml
logstash/pipeline/: logstash.conf
ml-evaluation-app/: Dockerfile_API  entrypoint.sh  pyproject.toml
ml-evaluation-app/app/: main.py
ml-evaluation-app/app/api/: api_v1.py
ml-evaluation-app/app/celery_worker/: celery_app.py
ml-evaluation-app/app/celery_worker/tasks/nlp/: __init__.py  pipeline.py
ml-evaluation-app/app/celery_worker/tasks/nlp/components/: sentiment.py
ml-evaluation-app/app/core/: config.py  log.py
ml-evaluation-worker/: Dockerfile  Dockerfile_API  Dockerfile_Worker  entrypoint.sh  pyproject.toml
ml-evaluation-worker/app/: pika_consumer.py  pika_utils.py  schemas.py
ml-evaluation-worker/app/core/: __init__.py  config.py  log.py  logging.conf
ml-evaluation-worker/app/db/: __init__.py  init_db.py  models.py
ml-evaluation-worker/app/llm/: __init__.py  client.py  prompts.py  requests.py
ml-evaluation-worker/app/models/: schemas.py
ml-evaluation-worker/app/nlp/: __init__.py  pipeline.py
ml-evaluation-worker/app/nlp/components/: clean_text.py  sentiment.py
ml-evaluation-worker/app/pipelines/: base.py  clean_process.py  emotion_detection_process.py  models.py  sentiment_process.py  summarize_results_process.py  utils.py
ml-evaluation-worker/app/pipelines/analyze_text/: __init__.py  clean_process.py  emotion_detection_process.py  find_references_process.py  pipeline.py  process_finish.py  process_start.py  sentiment_process.py  summarize_results_process.py  text_embedding_process.py  text_summary_process.py
ml-evaluation-worker/app/pipelines/claims_embedding/: __init__.py  claims_embedding_process.py  claims_insert_process.py  claims_summary_process.py  clean_process.py  pipeline.py  process_finish.py  process_start.py  retreive_new_claims_process.py
ml-evaluation-worker/notebooks/: tagger.ipynb  test.ipynb
nginx/conf/: default.conf
pfnd-ml-detector-app/: Dockerfile  README.md  pyproject.toml
pfnd-ml-detector-app/app/: main.py
pfnd-ml-detector-app/app/core/: log.py  logging.conf
pfnd-ml-detector-app/conf/: logging.yml
pfnd-ml-detector-app/docs/source/: conf.py  index.rst
pfnd-ml-detector-app/src/pfnd_ml_detector_app/: __init__.py  __main__.py  settings.py
pfnd-ml-detector-app/tests/pipelines/data_science/: test_pipeline.py
scrappers/: demagog.py  fakenews.py  main.py  requirements.txt
webapp/: .env.development  Dockerfile  package-lock.json  package.json  webpack.scss.config.js
webapp/public/: index.html
webapp/src/: App.js  Error.js  Sidebar.js  helper.js
webapp/src/css/: checker.css  checker.js  forms.css  forms.js  guest.css  guest.js  main.css  main.js  user.css  user.js  variables.css  variables.js
webapp/src/detector/: Checker.js
webapp/src/guest/: ChangePassword.js  Login.js  Logout.js  ResetPassword.js  validation.js
webapp/src/scss/: checker.scss  forms.scss  guest.scss  main.scss  user.scss  variables.scss
(+103 files in other folders)
