[tool.poetry]
name = "ml-evaluation-app"
version = "0.1.0"
description = ""
authors = ["Igor Bobrukiewicz <igor.bobrukiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"